--- a/富士宮焼きそばマップ.ipynb
+++ b/富士宮焼きそばマップ.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "import json\r\n",
-    "import os\r\n",
-    "import random\r\n",
-    "import time\r\n",
-    "import urllib.parse\r\n",
-    "\r\n",
-    "import numpy as np\r\n",
-    "import pandas\r\n",
-    "import plotly.express as px\r\n",
-    "import requests\r\n",
-    "from dotenv import load_dotenv\r\n"
+    "import json\n",
+    "import os\n",
+    "import random\n",
+    "import time\n",
+    "import urllib.parse\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas\n",
+    "import plotly.express as px\n",
+    "import requests\n",
+    "from dotenv import load_dotenv"
    ],
    "outputs": [],
    "metadata": {
@@ -25,13 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
-    "# トークン読み込み\r\n",
-    "# .envにMAPBOX_TOKENを入れてください。\r\n",
-    "\r\n",
-    "load_dotenv()\r\n",
-    "\r\n",
+    "# トークン読み込み\n",
+    "# .envにMAPBOX_TOKENを入れてください。\n",
+    "\n",
+    "load_dotenv()\n",
     "mapbox_token = os.environ[\"MAPBOX_TOKEN\"]"
    ],
    "outputs": [],
@@ -39,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "source": [
-    "# 焼きそばのリストをとってくる\r\n",
-    "# http://www.umya-yakisoba.com/contents/taberu/\r\n",
-    "\r\n",
-    "yakisoba_dfs = pandas.read_html(\"http://www.umya-yakisoba.com/contents/taberu/\")\r\n",
+    "# 焼きそばのリストをとってくる\n",
+    "# http://www.umya-yakisoba.com/contents/taberu/\n",
+    "\n",
+    "yakisoba_dfs = pandas.read_html(\"http://www.umya-yakisoba.com/contents/taberu/\")\n",
     "print(len(yakisoba_dfs))"
    ],
    "outputs": [
@@ -65,34 +64,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "source": [
-    "# 全体を統合して前処理\r\n",
-    "\r\n",
-    "yakisoba_all = pandas.concat(yakisoba_dfs[2:]).rename(columns={\r\n",
-    "    \"店　名\":\"店名\",\r\n",
-    "    \"住　所\":\"住所\",\r\n",
-    "    \"料 金\":\"料金\",\r\n",
-    "    \"休 日\":\"休日\",\r\n",
-    "    \"焼き方\":\"焼き方:店\",\r\n",
-    "    \"焼き方.1\":\"焼き方:客\"\r\n",
-    "})\r\n",
-    "# 必要ない列を除去\r\n",
-    "yakisoba_all = yakisoba_all.drop(columns=[\"番号\", \"地図\"])\r\n",
-    "# 住所がNaNなものを除去\r\n",
-    "yakisoba_all = yakisoba_all.dropna(subset = [\"住所\"])\r\n",
-    "# 店名で重複除去\r\n",
-    "yakisoba_all = yakisoba_all.drop_duplicates(subset=[\"店名\"])\r\n",
-    "\r\n",
-    "# 列名変更\r\n",
-    "yakisoba_all = yakisoba_all.reset_index(drop=True)\r\n"
+    "# 全体を統合して前処理\n",
+    "\n",
+    "yakisoba_all = pandas.concat(yakisoba_dfs[2:]).rename(columns={\n",
+    "    \"店　名\":\"店名\",\n",
+    "    \"住　所\":\"住所\",\n",
+    "    \"料 金\":\"料金\",\n",
+    "    \"休 日\":\"休日\",\n",
+    "    \"焼き方\":\"焼き方:店\",\n",
+    "    \"焼き方.1\":\"焼き方:客\"\n",
+    "})\n",
+    "# 必要ない列を除去\n",
+    "yakisoba_all = yakisoba_all.drop(columns=[\"番号\", \"地図\"])\n",
+    "# 住所がNaNなものを除去\n",
+    "yakisoba_all = yakisoba_all.dropna(subset = [\"住所\"])\n",
+    "# 店名で重複除去\n",
+    "yakisoba_all = yakisoba_all.drop_duplicates(subset=[\"店名\"])\n",
+    "\n",
+    "# 列名変更\n",
+    "yakisoba_all = yakisoba_all.reset_index(drop=True)\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "source": [
     "yakisoba_all"
    ],
@@ -311,7 +310,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 6
     }
    ],
    "metadata": {
@@ -323,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "source": [
     "yakisoba_all.to_csv(\"yakisoba_all_tmp.csv\",encoding=\"utf-8\")"
    ],
@@ -332,24 +331,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "source": [
-    "def get_lon_lat(zyuusyo):\r\n",
-    "    \"\"\"\r\n",
-    "    国土地理院のAPIを使って、\r\n",
-    "    負荷防止のために、ランダムで問い合わせを行うようにしてます。\r\n",
-    "    \r\n",
-    "    returnは(lat, lon) として返す\r\n",
-    "    lon:0\r\n",
-    "    lat:1\r\n",
-    "    ref: https://memo.appri.me/programming/gsi-geocoding-api#%E3%82%B8%E3%82%AA%E3%82%B3%E3%83%BC%E3%83%87%E3%82%A3%E3%83%B3%E3%82%B0API\r\n",
-    "    \"\"\"\r\n",
-    "    encoding_zyuusyo = urllib.parse.quote(zyuusyo)\r\n",
-    "    req_api = requests.get(f\"https://msearch.gsi.go.jp/address-search/AddressSearch?q={encoding_zyuusyo}\")\r\n",
-    "    print(req_api.text)\r\n",
-    "    req_json = json.loads(req_api.text)\r\n",
-    "    lon_lat = req_json[0][\"geometry\"][\"coordinates\"]\r\n",
-    "    time.sleep(random.randint(2,5))\r\n",
+    "def get_lon_lat(zyuusyo):\n",
+    "    \"\"\"\n",
+    "    国土地理院のAPIを使って、\n",
+    "    負荷防止のために、ランダムで問い合わせを行うようにしてます。\n",
+    "    \n",
+    "    returnは(lat, lon) として返す\n",
+    "    lon:0\n",
+    "    lat:1\n",
+    "    ref: https://memo.appri.me/programming/gsi-geocoding-api#%E3%82%B8%E3%82%AA%E3%82%B3%E3%83%BC%E3%83%87%E3%82%A3%E3%83%B3%E3%82%B0API\n",
+    "    \"\"\"\n",
+    "    encoding_zyuusyo = urllib.parse.quote(zyuusyo)\n",
+    "    req_api = requests.get(f\"https://msearch.gsi.go.jp/address-search/AddressSearch?q={encoding_zyuusyo}\")\n",
+    "\n",
+    "    print(f\"search:{zyuusyo} -> {req_api.text}\")\n",
+    "    \n",
+    "    req_json = json.loads(req_api.text)\n",
+    "    lon_lat = req_json[0][\"geometry\"][\"coordinates\"]\n",
+    "    time.sleep(random.randint(2,5))\n",
     "    return (lon_lat[1], lon_lat[0])"
    ],
    "outputs": [],
@@ -363,17 +364,17 @@
    "cell_type": "code",
    "execution_count": 10,
    "source": [
-    "# このコードは実行すると時間がかかるので、LT当日は行わないように\r\n",
-    "\r\n",
-    "# pandasにlot,latを入れる\r\n",
-    "\r\n",
-    "# copy_yakisoba_all = yakisoba_all.copy()\r\n",
-    "# yakisoba_all[\"lon_lat\"] = copy_yakisoba_all[\"住所\"].map(lambda x: get_lon_lat(f\"静岡県富士宮市{x}\"))\r\n",
-    "# copy_yakisoba_all = yakisoba_all.copy()\r\n",
-    "# yakisoba_all[\"lon\"] = copy_yakisoba_all[\"lon_lat\"].map(lambda x: x[1])\r\n",
-    "# yakisoba_all[\"lat\"] = copy_yakisoba_all[\"lon_lat\"].map(lambda x: x[0])\r\n",
-    "\r\n",
-    "# INFO:2021-08-26 copyを使うのが微妙に見えてしまう…\r\n",
+    "# このコードは実行すると時間がかかるので、LT当日は行わないように\n",
+    "\n",
+    "# pandasにlot,latを入れる\n",
+    "\n",
+    "# copy_yakisoba_all = yakisoba_all.copy()\n",
+    "# yakisoba_all[\"lon_lat\"] = copy_yakisoba_all[\"住所\"].map(lambda x: get_lon_lat(f\"静岡県富士宮市{x}\"))\n",
+    "# copy_yakisoba_all = yakisoba_all.copy()\n",
+    "# yakisoba_all[\"lon\"] = copy_yakisoba_all[\"lon_lat\"].map(lambda x: x[1])\n",
+    "# yakisoba_all[\"lat\"] = copy_yakisoba_all[\"lon_lat\"].map(lambda x: x[0])\n",
+    "\n",
+    "# INFO:2021-08-26 copyを使うのが微妙に見えてしまう…\n",
     "# 大体600秒ぐらいかかる"
    ],
    "outputs": [],
@@ -388,12 +389,12 @@
    "cell_type": "code",
    "execution_count": 11,
    "source": [
-    "# 上のセルの実行結果を保存しておいて\r\n",
-    "# yakisoba_all.to_csv(\"yakisoba_all_loclat.csv\",encoding=\"utf-8\")\r\n",
-    "# yakisoba_all.to_csv(\"yakisoba_all_loclat_sjis.csv\",encoding=\"cp932\")\r\n",
-    "\r\n",
-    "# csvファイルで読み込みます\r\n",
-    "\r\n",
+    "# 上のセルの実行結果を保存しておいて\n",
+    "# yakisoba_all.to_csv(\"yakisoba_all_loclat.csv\",encoding=\"utf-8\")\n",
+    "# yakisoba_all.to_csv(\"yakisoba_all_loclat_sjis.csv\",encoding=\"cp932\")\n",
+    "\n",
+    "# csvファイルで読み込みます\n",
+    "\n",
     "yakisoba_all = pandas.read_csv(\"yakisoba_all_loclat.csv\")"
    ],
    "outputs": [],
@@ -403,10 +404,10 @@
    "cell_type": "code",
    "execution_count": 12,
    "source": [
-    "px.set_mapbox_access_token(mapbox_token)\r\n",
-    "\r\n",
-    "fig = px.scatter_mapbox(yakisoba_all, lat=\"lat\", lon=\"lon\", hover_name=\"店名\",\r\n",
-    "                zoom=9, title=\"富士宮焼きそばマップ\")\r\n",
+    "px.set_mapbox_access_token(mapbox_token)\n",
+    "\n",
+    "fig = px.scatter_mapbox(yakisoba_all, lat=\"lat\", lon=\"lon\", hover_name=\"店名\",\n",
+    "                zoom=9, title=\"富士宮焼きそばマップ\")\n",
     "fig.show()"
    ],
    "outputs": [
@@ -1761,9 +1762,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "source": [
-    "fig = px.scatter_mapbox(yakisoba_all, lat=\"lat\", lon=\"lon\", hover_name=\"店名\",\r\n",
-    "                hover_data=[\"住所\",\"休日\",\"駐車場\",\"料金\"],\r\n",
-    "                zoom=9, title=\"富士宮焼きそばマップ\")\r\n",
+    "fig = px.scatter_mapbox(yakisoba_all, lat=\"lat\", lon=\"lon\", hover_name=\"店名\",\n",
+    "                hover_data=[\"住所\",\"休日\",\"駐車場\",\"料金\"],\n",
+    "                zoom=9, title=\"富士宮焼きそばマップ\")\n",
     "fig.show()"
    ],
    "outputs": [
@@ -4017,21 +4018,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "データ分析っぽくやる\r\n",
-    "\r\n",
-    "- 富士宮市内シェープデータ（があれば）で各地域のお店の多さ少なさを見てみよう\r\n",
-    "  - なかった（市内の地域別の囲み情報はなさそう？\r\n",
-    "- 市町村でグループ分けして、"
+    "データ分析っぽくやる\n",
+    "\n",
+    "- 富士宮市内シェープデータ（があれば）で各地域のお店の多さ少なさを見てみよう\n",
+    "  - なかった（市内の地域別の囲み情報はなさそう？\n",
+    "- 市町村でグループ分けしてみる？"
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# geopandas使ってみるか"
-   ],
-   "outputs": [],
    "metadata": {}
   },
   {
@@ -4071,7 +4063,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "# geopandas使ってみるか\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "pandasデータから -> KZL\n",
+    "作成できる？\n",
+    "\n",
+    "普通にCSVとかでもいいけど。。。\n"
+   ],
    "outputs": [],
    "metadata": {}
   }
@@ -4095,7 +4101,7 @@
    "version": "3.9.6"
   },
   "interpreter": {
-   "hash": "58e8cf843bc9b6a6b26a3232ff5fef70f4f58a05b1a7fe8f5da58afdd8bb3ecc"
+   "hash": "ba991c5373711da541662e96243c607f02a3c7f6e45dd64cc8c41b115c8706b2"
   }
  },
  "nbformat": 4,
