--- a/富士宮焼きそばマップ.ipynb
+++ b/富士宮焼きそばマップ.ipynb
@@ -1,6 +1,63 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 富士宮焼きそばを食べ歩きしたいのでマップを作った話\n",
+    "\n",
+    "Python駿河 / Unagi.py 2021/08月\n",
+    "\n",
+    "Hiroshi Sano"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "※なおこのスライドはJupyter + RISEで作成したのでどなたでも動作可能です\n",
+    "\n",
+    "- Google Colabも必要なパッケージを入れればいけるはず\n",
+    "- Plotly+MapBoxを使ったので、Mapboxアカウント作成、API利用登録=>トークンが必要になります\n",
+    "  - .envファイルに`MAPBOX_TOKEN=[token]`を入れてください\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## お前誰よ\n",
+    "\n",
+    "- 佐野浩士（Hiroshi Sano）[@hrs_sano645](https://twitter.com/hrs_sano645) 🏠:静岡県の富士市🗻\n",
+    "- Job💼\n",
+    "  - [佐野設計事務所🚗⚙️📏🖊️](https://sano-design.info)\n",
+    "    - 自動車系機械の3D設計事務所 ソフトウェアエンジニア 他いろいろ\n",
+    "  - 米農家🌾\n",
+    "- Community🧑‍💻\n",
+    "  - 🐍: Python駿河, PyCon mini Shizuokaスタッフ\n",
+    "  - 🏙💻: Code for ふじのくに\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### みなさんは富士宮焼きそば知ってますよね？\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "実演していきます"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "source": [
@@ -10,7 +67,6 @@
     "import time\n",
     "import urllib.parse\n",
     "\n",
-    "import numpy as np\n",
     "import pandas\n",
     "import plotly.express as px\n",
     "import requests\n",
@@ -25,11 +81,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "source": [
     "# トークン読み込み\n",
     "# .envにMAPBOX_TOKENを入れてください。\n",
-    "\n",
     "load_dotenv()\n",
     "mapbox_token = os.environ[\"MAPBOX_TOKEN\"]"
    ],
@@ -38,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "# 焼きそばのリストをとってくる\n",
     "# http://www.umya-yakisoba.com/contents/taberu/\n",
@@ -64,13 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
     "# 全体を統合して前処理\n",
     "\n",
     "yakisoba_all = pandas.concat(yakisoba_dfs[2:]).rename(columns={\n",
     "    \"店　名\":\"店名\",\n",
     "    \"住　所\":\"住所\",\n",
+    "    \"電話番号（0544）\": \"電話番号\",\n",
     "    \"料 金\":\"料金\",\n",
     "    \"休 日\":\"休日\",\n",
     "    \"焼き方\":\"焼き方:店\",\n",
@@ -84,14 +140,18 @@
     "yakisoba_all = yakisoba_all.drop_duplicates(subset=[\"店名\"])\n",
     "\n",
     "# 列名変更\n",
-    "yakisoba_all = yakisoba_all.reset_index(drop=True)\n"
+    "yakisoba_all = yakisoba_all.reset_index(drop=True)\n",
+    "\n",
+    "# 住所に`静岡県富士宮市`を挿入, 電話番号の市外局番をつける\n",
+    "yakisoba_all[\"住所\"] = yakisoba_all[\"住所\"].apply(lambda x: f\"静岡県富士宮市{x}\")\n",
+    "yakisoba_all[\"電話番号\"] = yakisoba_all[\"電話番号\"].apply(lambda x: f\"0544-{x}\")\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "source": [
     "yakisoba_all"
    ],
@@ -100,31 +160,44 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "            店名        住所 電話番号（0544）                      営業時間（休憩時間含）  \\\n",
-       "0    すぎ本（お宮横丁）    宮町4-23    24-8272                      10:30-16:00   \n",
-       "1       お食事処岩市   大宮町8-18    27-7153                      11:00-20:00   \n",
-       "2          ままん   大宮町5-17    29-6288           11:00-14:0018:00-22:00   \n",
-       "3       みっちゃん家   宝町11-24    27-5305             11:00-15:00(LO14:30)   \n",
-       "4         わびすけ    野中町806    23-8578  11:30-14:0014:30-22:00(LO21:00)   \n",
-       "..         ...       ...        ...                              ...   \n",
-       "147         大勝   淀師136-8    27-3968                      10:00－20:00   \n",
-       "148     うるおいてい   淀師415-2    24-7155                      11:30－14:00   \n",
-       "149   お好み食堂 伊東   淀師468-2    27-6494                      10:30－20:00   \n",
-       "150        しまい  淀師583-20    22-2767                      12:00－22:00   \n",
-       "151       ひまわり    若の宮町32    26-3279                      11:00－22:00   \n",
+       "            店名               住所          電話番号  \\\n",
+       "0    すぎ本（お宮横丁）    静岡県富士宮市宮町4-23  0544-24-8272   \n",
+       "1       お食事処岩市   静岡県富士宮市大宮町8-18  0544-27-7153   \n",
+       "2          ままん   静岡県富士宮市大宮町5-17  0544-29-6288   \n",
+       "3       みっちゃん家   静岡県富士宮市宝町11-24  0544-27-5305   \n",
+       "4         わびすけ    静岡県富士宮市野中町806  0544-23-8578   \n",
+       "..         ...              ...           ...   \n",
+       "147         大勝   静岡県富士宮市淀師136-8  0544-27-3968   \n",
+       "148     うるおいてい   静岡県富士宮市淀師415-2  0544-24-7155   \n",
+       "149   お好み食堂 伊東   静岡県富士宮市淀師468-2  0544-27-6494   \n",
+       "150        しまい  静岡県富士宮市淀師583-20  0544-22-2767   \n",
+       "151       ひまわり    静岡県富士宮市若の宮町32  0544-26-3279   \n",
        "\n",
-       "             休日     受入人数 駐車場 焼き方:店 焼き方:客        料金  \n",
-       "0           火曜日     お宮横丁   無     ○   NaN  300～600円  \n",
-       "1           水曜日  28＋座敷7間   2     ○   NaN  600-780円  \n",
-       "2         水・木曜日       26   無     ○   NaN      600円  \n",
-       "3    水曜日第１・３日曜日   8＋座敷2間   5     ○   NaN  350-600円  \n",
-       "4           水曜日       54  25     ○   NaN  620-980円  \n",
-       "..          ...      ...  ..   ...   ...       ...  \n",
-       "147         月曜日       25   7     ○   NaN  450～700円  \n",
-       "148         月曜日       50  15     ○     ○  350～800円  \n",
-       "149         月曜、       50  20     ○   NaN  350～600円  \n",
-       "150         日曜日       15   8     ○   NaN  350～550円  \n",
-       "151         火曜日       10   3     ○   NaN  400～650円  \n",
+       "                         営業時間（休憩時間含）          休日     受入人数 駐車場 焼き方:店 焼き方:客  \\\n",
+       "0                        10:30-16:00         火曜日     お宮横丁   無     ○   NaN   \n",
+       "1                        11:00-20:00         水曜日  28＋座敷7間   2     ○   NaN   \n",
+       "2             11:00-14:0018:00-22:00       水・木曜日       26   無     ○   NaN   \n",
+       "3               11:00-15:00(LO14:30)  水曜日第１・３日曜日   8＋座敷2間   5     ○   NaN   \n",
+       "4    11:30-14:0014:30-22:00(LO21:00)         水曜日       54  25     ○   NaN   \n",
+       "..                               ...         ...      ...  ..   ...   ...   \n",
+       "147                      10:00－20:00         月曜日       25   7     ○   NaN   \n",
+       "148                      11:30－14:00         月曜日       50  15     ○     ○   \n",
+       "149                      10:30－20:00         月曜、       50  20     ○   NaN   \n",
+       "150                      12:00－22:00         日曜日       15   8     ○   NaN   \n",
+       "151                      11:00－22:00         火曜日       10   3     ○   NaN   \n",
+       "\n",
+       "           料金  \n",
+       "0    300～600円  \n",
+       "1    600-780円  \n",
+       "2        600円  \n",
+       "3    350-600円  \n",
+       "4    620-980円  \n",
+       "..        ...  \n",
+       "147  450～700円  \n",
+       "148  350～800円  \n",
+       "149  350～600円  \n",
+       "150  350～550円  \n",
+       "151  400～650円  \n",
        "\n",
        "[152 rows x 10 columns]"
       ],
@@ -149,7 +222,7 @@
        "      <th></th>\n",
        "      <th>店名</th>\n",
        "      <th>住所</th>\n",
-       "      <th>電話番号（0544）</th>\n",
+       "      <th>電話番号</th>\n",
        "      <th>営業時間（休憩時間含）</th>\n",
        "      <th>休日</th>\n",
        "      <th>受入人数</th>\n",
@@ -163,8 +236,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>すぎ本（お宮横丁）</td>\n",
-       "      <td>宮町4-23</td>\n",
-       "      <td>24-8272</td>\n",
+       "      <td>静岡県富士宮市宮町4-23</td>\n",
+       "      <td>0544-24-8272</td>\n",
        "      <td>10:30-16:00</td>\n",
        "      <td>火曜日</td>\n",
        "      <td>お宮横丁</td>\n",
@@ -176,8 +249,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>お食事処岩市</td>\n",
-       "      <td>大宮町8-18</td>\n",
-       "      <td>27-7153</td>\n",
+       "      <td>静岡県富士宮市大宮町8-18</td>\n",
+       "      <td>0544-27-7153</td>\n",
        "      <td>11:00-20:00</td>\n",
        "      <td>水曜日</td>\n",
        "      <td>28＋座敷7間</td>\n",
@@ -189,8 +262,8 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>ままん</td>\n",
-       "      <td>大宮町5-17</td>\n",
-       "      <td>29-6288</td>\n",
+       "      <td>静岡県富士宮市大宮町5-17</td>\n",
+       "      <td>0544-29-6288</td>\n",
        "      <td>11:00-14:0018:00-22:00</td>\n",
        "      <td>水・木曜日</td>\n",
        "      <td>26</td>\n",
@@ -202,8 +275,8 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>みっちゃん家</td>\n",
-       "      <td>宝町11-24</td>\n",
-       "      <td>27-5305</td>\n",
+       "      <td>静岡県富士宮市宝町11-24</td>\n",
+       "      <td>0544-27-5305</td>\n",
        "      <td>11:00-15:00(LO14:30)</td>\n",
        "      <td>水曜日第１・３日曜日</td>\n",
        "      <td>8＋座敷2間</td>\n",
@@ -215,8 +288,8 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>わびすけ</td>\n",
-       "      <td>野中町806</td>\n",
-       "      <td>23-8578</td>\n",
+       "      <td>静岡県富士宮市野中町806</td>\n",
+       "      <td>0544-23-8578</td>\n",
        "      <td>11:30-14:0014:30-22:00(LO21:00)</td>\n",
        "      <td>水曜日</td>\n",
        "      <td>54</td>\n",
@@ -241,8 +314,8 @@
        "    <tr>\n",
        "      <th>147</th>\n",
        "      <td>大勝</td>\n",
-       "      <td>淀師136-8</td>\n",
-       "      <td>27-3968</td>\n",
+       "      <td>静岡県富士宮市淀師136-8</td>\n",
+       "      <td>0544-27-3968</td>\n",
        "      <td>10:00－20:00</td>\n",
        "      <td>月曜日</td>\n",
        "      <td>25</td>\n",
@@ -254,8 +327,8 @@
        "    <tr>\n",
        "      <th>148</th>\n",
        "      <td>うるおいてい</td>\n",
-       "      <td>淀師415-2</td>\n",
-       "      <td>24-7155</td>\n",
+       "      <td>静岡県富士宮市淀師415-2</td>\n",
+       "      <td>0544-24-7155</td>\n",
        "      <td>11:30－14:00</td>\n",
        "      <td>月曜日</td>\n",
        "      <td>50</td>\n",
@@ -267,8 +340,8 @@
        "    <tr>\n",
        "      <th>149</th>\n",
        "      <td>お好み食堂 伊東</td>\n",
-       "      <td>淀師468-2</td>\n",
-       "      <td>27-6494</td>\n",
+       "      <td>静岡県富士宮市淀師468-2</td>\n",
+       "      <td>0544-27-6494</td>\n",
        "      <td>10:30－20:00</td>\n",
        "      <td>月曜、</td>\n",
        "      <td>50</td>\n",
@@ -280,8 +353,8 @@
        "    <tr>\n",
        "      <th>150</th>\n",
        "      <td>しまい</td>\n",
-       "      <td>淀師583-20</td>\n",
-       "      <td>22-2767</td>\n",
+       "      <td>静岡県富士宮市淀師583-20</td>\n",
+       "      <td>0544-22-2767</td>\n",
        "      <td>12:00－22:00</td>\n",
        "      <td>日曜日</td>\n",
        "      <td>15</td>\n",
@@ -293,8 +366,8 @@
        "    <tr>\n",
        "      <th>151</th>\n",
        "      <td>ひまわり</td>\n",
-       "      <td>若の宮町32</td>\n",
-       "      <td>26-3279</td>\n",
+       "      <td>静岡県富士宮市若の宮町32</td>\n",
+       "      <td>0544-26-3279</td>\n",
        "      <td>11:00－22:00</td>\n",
        "      <td>火曜日</td>\n",
        "      <td>10</td>\n",
@@ -310,7 +383,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 5
     }
    ],
    "metadata": {
@@ -322,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "source": [
     "yakisoba_all.to_csv(\"yakisoba_all_tmp.csv\",encoding=\"utf-8\")"
    ],
@@ -331,27 +404,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "source": [
-    "def get_lon_lat(zyuusyo):\n",
+    "def get_lon_lat(address: str) :\n",
     "    \"\"\"\n",
-    "    国土地理院のAPIを使って、\n",
-    "    負荷防止のために、ランダムで問い合わせを行うようにしてます。\n",
-    "    \n",
-    "    returnは(lat, lon) として返す\n",
-    "    lon:0\n",
-    "    lat:1\n",
-    "    ref: https://memo.appri.me/programming/gsi-geocoding-api#%E3%82%B8%E3%82%AA%E3%82%B3%E3%83%BC%E3%83%87%E3%82%A3%E3%83%B3%E3%82%B0API\n",
+    "        国土地理院のAPIを使って、\n",
+    "        負荷防止のために、ランダムで問い合わせを行うようにしてます。\n",
+    "        \n",
+    "        returnは(lat, lon) を返す\n",
+    "                \n",
+    "        ref: https://memo.appri.me/programming/gsi-geocoding-api#%E3%82%B8%E3%82%AA%E3%82%B3%E3%83%BC%E3%83%87%E3%82%A3%E3%83%B3%E3%82%B0API\n",
     "    \"\"\"\n",
-    "    encoding_zyuusyo = urllib.parse.quote(zyuusyo)\n",
-    "    req_api = requests.get(f\"https://msearch.gsi.go.jp/address-search/AddressSearch?q={encoding_zyuusyo}\")\n",
     "\n",
-    "    print(f\"search:{zyuusyo} -> {req_api.text}\")\n",
+    "    # 住所文字をURLエンコード\n",
+    "    encoding_address = urllib.parse.quote(address)\n",
+    "\n",
+    "    req_api = requests.get(f\"https://msearch.gsi.go.jp/address-search/AddressSearch?q={encoding_address}\")\n",
+    "\n",
+    "    # 結果をprint\n",
+    "    print(f\"search:{address} -> {req_api.text}\")\n",
     "    \n",
+    "    # GeoJsonからlon、latをgetする\n",
     "    req_json = json.loads(req_api.text)\n",
-    "    lon_lat = req_json[0][\"geometry\"][\"coordinates\"]\n",
+    "    coordinates = req_json[0][\"geometry\"][\"coordinates\"]\n",
+    "\n",
+    "    # 問い合わせの時間をランダムでずらす\n",
     "    time.sleep(random.randint(2,5))\n",
-    "    return (lon_lat[1], lon_lat[0])"
+    "\n",
+    "    return (coordinates[1], coordinates[0])"
    ],
    "outputs": [],
    "metadata": {
@@ -362,20 +442,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "source": [
-    "# このコードは実行すると時間がかかるので、LT当日は行わないように\n",
+    "# このコードは実行すると大体600秒ぐらいかかるので、LT当日は行わないように\n",
     "\n",
-    "# pandasにlot,latを入れる\n",
+    "# pandasにlon,latを入れる\n",
     "\n",
     "# copy_yakisoba_all = yakisoba_all.copy()\n",
-    "# yakisoba_all[\"lon_lat\"] = copy_yakisoba_all[\"住所\"].map(lambda x: get_lon_lat(f\"静岡県富士宮市{x}\"))\n",
+    "# yakisoba_all[\"lon_lat\"] = copy_yakisoba_all[\"住所\"].map(lambda x: get_lon_lat(x))\n",
     "# copy_yakisoba_all = yakisoba_all.copy()\n",
     "# yakisoba_all[\"lon\"] = copy_yakisoba_all[\"lon_lat\"].map(lambda x: x[1])\n",
     "# yakisoba_all[\"lat\"] = copy_yakisoba_all[\"lon_lat\"].map(lambda x: x[0])\n",
     "\n",
-    "# INFO:2021-08-26 copyを使うのが微妙に見えてしまう…\n",
-    "# 大体600秒ぐらいかかる"
+    "# INFO:2021-08-26 copyを使うのがやや微妙感あるけど、警告出てたのでそうしました"
    ],
    "outputs": [],
    "metadata": {
@@ -387,13 +466,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "source": [
     "# 上のセルの実行結果を保存しておいて\n",
     "# yakisoba_all.to_csv(\"yakisoba_all_loclat.csv\",encoding=\"utf-8\")\n",
     "# yakisoba_all.to_csv(\"yakisoba_all_loclat_sjis.csv\",encoding=\"cp932\")\n",
     "\n",
-    "# csvファイルで読み込みます\n",
+    "# すでにlon、lat入りのcsvファイルで読み込みます\n",
     "\n",
     "yakisoba_all = pandas.read_csv(\"yakisoba_all_loclat.csv\")"
    ],
@@ -402,8 +481,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "source": [
+    "# Plotly + scatter mapboxで地図にポイント\n",
     "px.set_mapbox_access_token(mapbox_token)\n",
     "\n",
     "fig = px.scatter_mapbox(yakisoba_all, lat=\"lat\", lon=\"lon\", hover_name=\"店名\",\n",
@@ -1760,7 +1840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "source": [
     "fig = px.scatter_mapbox(yakisoba_all, lat=\"lat\", lon=\"lon\", hover_name=\"店名\",\n",
     "                hover_data=[\"住所\",\"休日\",\"駐車場\",\"料金\"],\n",
@@ -4018,17 +4098,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "データ分析っぽくやる\n",
-    "\n",
-    "- 富士宮市内シェープデータ（があれば）で各地域のお店の多さ少なさを見てみよう\n",
-    "  - なかった（市内の地域別の囲み情報はなさそう？\n",
-    "- 市町村でグループ分けしてみる？"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "ここまでのまとめ\n",
     "\n",
     "- pandas.read_table便利\n",
@@ -4055,30 +4124,75 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Google マイマップへの書き出しどうする？\r\n",
-    "\r\n"
+    "Google マイマップでさっきのCSVファイルを取り込む"
    ],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "source": [
-    "# geopandas使ってみるか\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "pandasデータから -> KZL\n",
-    "作成できる？\n",
     "\n",
-    "普通にCSVとかでもいいけど。。。\n"
+    "![googlemymap_yakisoba](./slide_asset/img/googlemymap_yakisoba.png)"
    ],
-   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "マッピングできた\n",
+    "\n",
+    "富士宮に行ったらお店をすぐに探せます😋"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### まとめ"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "富士宮焼きそばはうまいのでぜひ食べよう（県外の人向け）"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### まとめ\n",
+    "\n",
+    "- pandasを駆使してデータを作ってオープンデータ化するのは面白い\n",
+    "- Plotly強い。便利。\n",
+    "- マップ系の連携とかもうちょっと勉強したい"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### もっとやりたかったこと\n",
+    "\n",
+    "- 地図のシェープデータで富士宮の地域ごとのお店出現数のコロプレスマップを見たかった\n",
+    "  - ?\n",
+    "- 食べ歩きの最適なルート算出とかしてみたい\n",
+    "  - ?\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### さらにやりたかったこと\n",
+    "\n",
+    "- 地図のシェープデータで富士宮の地域ごとのお店出現数のコロプレスマップを見たかった\n",
+    "  - 細かい地域のシェープデータはなさそうだった（探しきれてないかも）\n",
+    "- 食べ歩きの最適なルート算出とかしてみたい\n",
+    "  - ネットワーク図というかダイクストラを解けば良さそう\n",
+    "  - それするならGoogleマップでやるかな..."
+   ],
    "metadata": {}
   }
  ],
