--- a/富士宮焼きそばマップ stapy202109用.ipynb
+++ b/富士宮焼きそばマップ stapy202109用.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9391a4f",
+   "id": "c51eace6",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -348,7 +348,7 @@
    "id": "c86d37c4",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -1202,7 +1202,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "yakisoba_all.to_csv(\"yakisoba_all_tmp.csv\",encoding=\"utf-8\")"
    ]
   },
@@ -5046,7 +5045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a183085",
+   "id": "363b765f",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -5058,7 +5057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "670f3dde",
+   "id": "668d41d3",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -5074,7 +5073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d55b38f",
+   "id": "1430757b",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -5086,7 +5085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83e8c90c",
+   "id": "e8715310",
    "metadata": {},
    "source": [
     "## PyCon mini Shizuoka 2021\n",
